# Akagi-MjaiBot-Mortal

./: .gitignore  README.md  _libriichi_loader.py  bot.py  manifest.toml  meta_show.py  model.py  ot_settings.json  pyproject.toml  test_libriichi_loader.py  test_meta_show.py
.github/workflows/: release-zip.yml
